# routes/contacts.js
@@ -14,11 +14,23 @@ router.get("/", contactsController.getAll);
 router.get("/:id", validateObjectId, contactsController.getSingle);
 
 // CREATE new contact
+/**
+ * @route POST /contacts
+ * @security bearerAuth
+ */
 router.post("/", ensureAuthenticated, validate(contactCreate), contactsController.createContact);
 // UPDATE a contact
+/**
+ * @route PUT /contacts/{id}
+ * @security bearerAuth
+ */
 router.put("/:id", ensureAuthenticated, validateObjectId, validate(contactUpdate), contactsController.updateContact);
 
 // DELETE a contact
+/**
+ * @route DELETE /contacts/{id}
+ * @security bearerAuth
+ */
 router.delete("/:id", ensureAuthenticated, validateObjectId, contactsController.deleteContact);
 
 module.exports = router;
